# aiagentwebgis

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/agent/: __init__.py  checkpointer.py  graph.py  graph_v2.py  progress.py  state.py
backend/agent/llm/: __init__.py  base.py  factory.py  ollama.py  openai_adapter.py  tongyi.py
backend/agent/nodes/: formatter.py  planner.py  router.py
backend/agent/prompts/: __init__.py  system.py
backend/agent/tools/: __init__.py  critic_validator.py  distance_matrix.py  geo_partition.py  geocoding.py  optimize_route.py  plan_day_route.py  poi_alignment.py  poi_dedup.py  poi_search.py  route_planning.py  search_strategy.py  spatial_analysis.py  submit_plan.py  tsp_solver.py  weather.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  chat.py  poi.py  trip.py  user.py
backend/app/schemas/: __init__.py  agent.py  auth.py  chat.py  (+2 more)
backend/migrations/: 0001_poi_indexes_and_constraints.down.sql  0001_poi_indexes_and_constraints.sql  0002_user_created_at.down.sql  0002_user_created_at.sql  0003_trip_days_route_fields.down.sql  0003_trip_days_route_fields.sql
backend/recommendation/: __init__.py  clustering.py  mmr.py  pipeline.py  scoring.py  spatial_filter.py  tsp.py
backend/scripts/: __init__.py  init_admin.py  seed_all.py  seed_base.py  seed_chengdu.py  seed_hangzhou.py
backend/tests/: conftest.py  test_amap_service.py  test_duration_estimator.py  test_health.py  test_models.py  test_poi_dedup.py  test_schemas.py
(+276 files in other folders)
